--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.13.1",
     "next": "15.5.4",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
+    "react-code-block": "^1.1.3",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
