--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/elements": "^0.23.79",
-    "@clerk/nextjs": "^6.34.5",
+    "@clerk/elements": "^0.24.0",
+    "@clerk/nextjs": "^6.36.3",
     "@emailjs/browser": "^4.4.1",
     "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.13.1",
     "dotenv": "^17.2.3",
-    "next": "15.5.4",
+    "next": "^16.0.10",
     "prism-react-renderer": "^2.4.1",
-    "react": "19.1.0",
+    "react": "^19.2.3",
     "react-code-block": "^1.1.3",
-    "react-dom": "19.1.0"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
