--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/elements": "^0.24.0",
     "@clerk/nextjs": "^6.36.3",
     "@emailjs/browser": "^4.4.1",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "bootstrap": "^5.3.5",
