--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@clerk/elements": "^0.24.0",
     "@clerk/nextjs": "^6.36.3",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emailjs/browser": "^4.4.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^6.19.0",
@@ -19,6 +21,7 @@
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.13.1",
     "dotenv": "^17.2.3",
+    "fs": "^0.0.1-security",
     "next": "^16.0.10",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.2.3",
